clearing up  the html and adding some js

--- a/index.html
+++ b/index.html
@@ -12,38 +12,37 @@
         <p class="result">0</p>
     </div>
     <div class="buttons-panel">
-        <div class="operations">
-            <button class="clear" value="C">C</button>
-            <button class="pow" value=x&sup2;>x&sup2;</button>
-            <button class="percentage" value="%">%</button>
-            <button class="undo" value="X">&#8678</button>
+        <div>
+            <button class="clear" data-clear>AC</button>
+            <button data-operand>x&sup2;</button>
+            <button data-operand>%</button>
+            <button data-delete>&#8678</button>
         </div>
-        <div class="high-numbers">
-            <button class="seven" value="7">7</button>
-            <button class="eight" value="8">8</button>
-            <button class="nine" value="9">9</button>
-            <button class="divide" value="/">/</button>
+        <div>
+            <button data-number>7</button>
+            <button data-number>8</button>
+            <button data-number>9</button>
+            <button data-operand>/</button>
         </div>
-        <div class="mid-numbers">
-            <button class="four" value="4">4</button>
-            <button class="five" value="5">5</button>
-            <button class="six" value="6">6</button>
-            <button class="multiply" value="*">*</button>
+        <div>
+            <button data-number>4</button>
+            <button data-number>5</button>
+            <button data-number>6</button>
+            <button data-operand>*</button>
         </div>
-        <div class="low-numbers">
-            <button class="one" value="1">1</button>
-            <button class="two" value="2">2</button>
-            <button class="three" value="3">3</button>
-            <button class="minus" value="-">-</button>
+        <div>
+            <button data-number>1</button>
+            <button data-number>2</button>
+            <button data-number>3</button>
+            <button data-operand>-</button>
         </div>
-        <div class="zero-and-signs">
-            <button class="zero" value="0">0</button>
-            <button class="dot" value=".">.</button>
-            <button class="equal" value="=">=</button>
-            <button class="plus" value="+">+</button>
+        <div>
+            <button data-number>0</button>
+            <button data-number>.</button>
+            <button data-equals>=</button>
+            <button data-operand>+</button>
         </div>
     </div>
 </div>
 <script src="./script/script.js"></script>
-
 </html>
