populating calc screen, AC and dell button

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <div class="container">
     <div class="screen">
-        <p class="showOperation">0</p>
-        <p class="result">0</p>
+        <p class="showOperation"></p>
+        <p class="result"></p>
     </div>
     <div class="buttons-panel">
         <div>
