working without keyboard input

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div>
             <button data-number>0</button>
-            <button data-number>.</button>
+            <button data-decimal>.</button>
             <button data-equals>=</button>
             <button data-operand>+</button>
         </div>
